Add test in MainActivity using a FakeGPU to check if my LCD view works or not

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -21,4 +21,10 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
+  <com.github.pedrovgs.androidgameboyemulator.lcd.LCD
+      android:id="@+id/lcd"
+      android:layout_width="160px"
+      android:layout_height="144px"
+      android:background="@android:color/black"/>
+
 </RelativeLayout>
