Change LCD background color to be more realistic

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -27,6 +27,6 @@
       android:layout_height="288dp"
       android:layout_marginTop="40dp"
       android:layout_centerHorizontal="true"
-      android:background="@android:color/black"/>
+      android:background="@color/lcd_background_color"/>
 
 </RelativeLayout>
